# F1Lab-AI

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  _run_validation.py  docker-compose.yml  pyproject.toml
agents/: adversarial_agent.py  experiment_agent.py  graph.py  regulation_agent.py  report_agent.py  validation_agent.py
configs/: car_families.yaml  metric_thresholds.yaml  track_boundary_profiles.yaml  track_pack.yaml
configs/campaigns/: baku_redteam.yaml  fullgrid_barcelona_rule_based.yaml  suzuka_mini_deepagents.yaml  suzuka_mini_multiagent.yaml  suzuka_spoon_falsification.yaml
configs/conditions/: dry_hot.yaml  wet_light.yaml  windy_baku.yaml
configs/duckdb/: schema.sql
configs/experiments/: baku_closing_speed.yaml  barcelona_balance.yaml  monaco_train_index.yaml  monza_energy_stress.yaml
configs/regulations/: regulation_2025.yaml  regulation_2026_initial.yaml  regulation_2026_refined.yaml  regulation_experimental.yaml
configs/steward/: default.yaml
configs/tracks/: austria.yaml  baku.yaml  barcelona.yaml  monaco.yaml  monza.yaml  silverstone.yaml  singapore.yaml  suzuka.yaml
configs/validation/: public_primitives_target_pack.yaml  public_race_target_pack.yaml
dashboards/: streamlit_app.py
dashboards/pages/: __init__.py
docs/: llm_runtime.md
reglabsim/: __init__.py  cli.py  facade.py  interfaces.py
reglabsim/agents/: __init__.py  campaign_trace.py  falsification_agent.py
reglabsim/campaigns/: __init__.py  ranking.py  report.py  runner.py  spec.py
reglabsim/circuits/: __init__.py  base.py  reconstruction.py  segmentation.py  track_model.py
reglabsim/conditions/: __init__.py  evolution.py  forecast.py  grip.py  repository.py  scenarios.py  track_state.py  weather.py
reglabsim/data/: __init__.py  base.py  fastf1_client.py  jolpica_client.py  openf1_client.py  openmeteo_client.py  pipelines.py  storage.py  unified_source.py
reglabsim/failures/: __init__.py  classifier.py  mitigation.py  taxonomy.py
reglabsim/falsification/: __init__.py  adaptive_search.py  failure_taxonomy.py  scoring.py  search.py  surrogate.py  surrogate_guided_search.py  surrogate_models.py  track_conditioned_search.py
reglabsim/lap/: __init__.py  base.py  calibration.py  lap_simulator.py  speed_profile.py  speed_profile_numba.py
reglabsim/llm/: __init__.py  nvidia_assistant.py
reglabsim/logging/: __init__.py  audit_report.py  replay.py
reglabsim/metrics/: __init__.py  artificial_pass.py  base.py  battery_dependency.py  closing_speed.py  dominance.py  helpers.py  registry.py  robustness.py  track_limits_exploit.py  train_formation.py  unsafe_rejoin.py  weather_sensitivity.py
reglabsim/optimization/: __init__.py  adversarial.py  bayesian.py  evolutionary.py  monte_carlo.py
reglabsim/race/: __init__.py  base.py  dirty_air.py  pitstop.py  race_state.py  safety_car.py  slipstream.py  traffic.py
reglabsim/regulation/: __init__.py  base.py  constraints.py  parser.py  registry.py  versioning.py
reglabsim/rl/: __init__.py  env.py  rewards.py  spaces.py  wrappers.py
reglabsim/runtime/: __init__.py  action_arbitrator.py  action_validator.py  agents.py  microkernel.py  observation_builder.py  schema.py
reglabsim/safety/: __init__.py  calibration.py  events.py  model.py  safety_oracle.py  (+1 more)
regulation/: regulation_2026_initial.yaml
tests/: __init__.py
(+345 files in other folders)
