[project]
name = "f1lab-ai"
version = "0.2.0"
description = "F1Lab-AI: Advanced F1 Regulation Stress-Testing Laboratory"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "F1Lab Team", email = "team@f1lab.ai"}
]
keywords = ["f1", "formulia-1", "simulation", "regulation", "motorsport", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "numba>=0.59",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    "duckdb>=1.0,<2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
data = [
    "fastf1>=3.0,<4.0",
    "requests>=2.31",
    "httpx>=0.27",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.20",
    "altair>=5.0",
]
ml = [
    "scikit-learn>=1.4",
    "torch>=2.0",
]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "pettingzoo>=1.24",
]
agents = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]
optimization = [
    "optuna>=3.6",
    "pymoo>=0.6",
    "nevergrad>=1.0",
]
geo = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "osmnx>=2.0",
]
weather = [
    "meteostat>=1.6",
    "cdsapi>=0.7",
]
vision = [
    "opencv-python>=4.9",
    "scikit-image>=0.22",
    "pillow>=10.0",
]
sim-advanced = [
    "casadi>=3.6",
    "jax>=0.4",
]
tracking = [
    "mlflow>=2.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "mypy>=1.9",
    "ruff>=0.3",
    "black>=24.0",
    "pre-commit>=3.6",
]

[project.scripts]
f1lab = "reglabsim.cli:main"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reglabsim"]

[tool.hatch.build.targets.sdist]
include = [
    "/reglabsim",
    "/configs",
    "/AGENTS.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["reglabsim"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_error_context = true
